# MTI855_CorpsElastiques

./: CMakeLists.txt  Question.txt  main.cpp
include/: BackwardEuler.h  CollisionDetect.h  Contact.h  Geometry.h  SoftBodyViewer.h  TetMesh.h  TetMeshLoader.h
resources/: beam.mesh  beam.ply  bunny.blend  bunny.mesh  bunny.ply  cube.mesh  cube.ply  monkey.ply  tet.mesh
src/: CollisionDetect.cpp  Contact.cpp  SoftBodyViewer.cpp  TetMesh.cpp  TetMeshLoader.cpp
